cursive-bootstrap/tests/ui/E-TYP/E-TYP-2506.cursive
// RUN: compile-fail
// DIAG: E-TYP-2506
// SPEC: 13.2
// DESC: Coherence violation - duplicate class implementation

class Foo {
    procedure bar(~) -> i32
}

record MyType <: Foo, Foo {  //~ ERROR E-TYP-2506: duplicate impl
    x: i32
    procedure bar(~) -> i32 {
        return ~.x
    }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
